--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@ TODO verify src localization
 
             <div class="page1" ><a href="./aboutus.html">About Us</a></div>
             <div class="page2" ><a href="./news.html">News</a></div>
-            <div class="page3" ><a href="./drawings.html">Drawings</a></div>
-            <div class="page4" ><a href="./postcards.html">Postcards</a></div>
-            <div class="page5" ><a href="./contactus.html">Contact Us</a></div>
-            <div class="page6" ><a href="./signin.html">Sign In</a></div>
+            <div class="page3" ><a href="./artworks.html">Drawings</a></div>
+            <div class="page4" ><a href="./contactus.html">Contact Us</a></div>
+            <div class="page5" ><a href="./signin.html">Sign In</a></div>
                         
         </div>
     </header>
