Added social media od main page

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 TODO add links to social media
 TODO verify src localization
 -->
-                    <a href="https://www.google.com"><img src="/images/etsy.jpg" alt="Et"></a>
-                    <li><img src="pinterest.jpg" alt="Pin"></li>
-                    <li><img src="facebook.jpg" alt="Fb"> </li>
-                    <li><img src="instagram.jpg" alt="Ins"></li>
-                    <li><img src="tiktok.jpg" alt="TT"> </li>
+                    <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d"><img class="etsy" src="./images/ramka.gif" alt="Et"></a>
+                    <a href="https://pl.pinterest.com/agellerart/"><img class="pint" src="./images/ramka.gif" alt="Pt"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100086386541551"><img class="fb" src="./images/ramka.gif" alt="Fb"></a>
+                    <a href="https://www.instagram.com/a.gellerart/"><img class="insta" src="./images/ramka.gif" alt="Ins"></a>
+                    <a href="https://www.tiktok.com/@a.gellerart"><img class="tikt" src="./images/ramka.gif" alt="TT"></a>
                 </ul>
             </div>
 
@@ -37,7 +37,7 @@ TODO verify src localization
 
             <div class="page1" ><a href="./aboutus.html">About Us</a></div>
             <div class="page2" ><a href="./news.html">News</a></div>
-            <div class="page3" ><a href="./artworks.html">Drawings</a></div>
+            <div class="page3" ><a href="./artworks.html">Artworks</a></div>
             <div class="page4" ><a href="./contactus.html">Contact Us</a></div>
             <div class="page5" ><a href="./signin.html">Sign In</a></div>
                         
@@ -45,7 +45,7 @@ TODO verify src localization
     </header>
 
     <body>
-
+        <img src="./images/instagram.gif" alt="Ins"></a>
     </body>
 
     <footer>
