--- a/index.html
+++ b/index.html
@@ -10,28 +10,25 @@
             <div class="logo"><img src="logo.jpg" alt="Logo"></div>
             <div class="empty"> </div>
 
+            <!-- grids nested in header-grid with small icons (social media, favorite ad cart); --- 
+            icons are displayed as a three different .gif-s for every specyfic icon-type; 
+            code below displeys only icon-frame with empty background, same for every icon; 
+            specyfic icons and hovers are displeyed as a background option defined in styles -->
+
             <div class="socmed1">
                 <ul>
-<!--                     
-TODO add links to social media
-TODO verify src localization
--->
-                    <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d"><img class="etsy" src="./images/ramka.gif" alt="Et"></a>
-                    <a href="https://pl.pinterest.com/agellerart/"><img class="pint" src="./images/ramka.gif" alt="Pt"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100086386541551"><img class="fb" src="./images/ramka.gif" alt="Fb"></a>
-                    <a href="https://www.instagram.com/a.gellerart/"><img class="insta" src="./images/ramka.gif" alt="Ins"></a>
-                    <a href="https://www.tiktok.com/@a.gellerart"><img class="tikt" src="./images/ramka.gif" alt="TT"></a>
+                    <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d"><img class="etsy" src="./images/frame.gif" alt="Et"></a>
+                    <a href="https://pl.pinterest.com/agellerart/"><img class="pint" src="./images/frame.gif" alt="Pt"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100086386541551"><img class="fb" src="./images/frame.gif" alt="Fb"></a>
+                    <a href="https://www.instagram.com/a.gellerart/"><img class="insta" src="./images/frame.gif" alt="Ins"></a>
+                    <a href="https://www.tiktok.com/@a.gellerart"><img class="tikt" src="./images/frame.gif" alt="TT"></a>
                 </ul>
             </div>
 
             <div class="favcart">
                 <ul>
-<!-- 
-TODO add links
-TODO verify src localization 
--->
-                    <li><img src="favorite.jpg" alt="Fav"></li>
-                    <li><img src="cart.jpg" alt="Cart"></li>
+                    <a href="./favorite.html"><img class="fav" src="./images/frame.gif" alt="fav"></a>
+                    <a href="./shoppingcart.html"><img class="cart" src="./images/frame.gif" alt="cart"></a>
                 </ul>
             </div>
 
