Images on landing page, favicon, logo in header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
+
+<!--- Created three layouts for three screen widths: up to 700, 700-1200, 1200 and more -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>A. Geller Art</title>
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <link rel="stylesheet" href="styles.css">
     </head>
     <header>
         <div class="grid-container">
 
-            <div class="logo"><img src="logo.jpg" alt="Logo"></div>
-            <div class="empty"> </div>
+            <a class="logo" href="./index.html"><img src="./images/logo100.gif" alt="Logo"></a>
 
             <!-- grids nested in header-grid with small icons (social media, favorite ad cart); --- 
             icons are displayed as a three different .gif-s for every specyfic icon-type; 
@@ -17,11 +20,11 @@
 
             <div class="socmed1">
                 <ul>
-                    <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d"><img class="etsy" src="./images/frame.gif" alt="Et"></a>
-                    <a href="https://pl.pinterest.com/agellerart/"><img class="pint" src="./images/frame.gif" alt="Pt"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100086386541551"><img class="fb" src="./images/frame.gif" alt="Fb"></a>
-                    <a href="https://www.instagram.com/a.gellerart/"><img class="insta" src="./images/frame.gif" alt="Ins"></a>
-                    <a href="https://www.tiktok.com/@a.gellerart"><img class="tikt" src="./images/frame.gif" alt="TT"></a>
+                    <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d" target="_blank"><img class="etsy" src="./images/frame.gif" alt="Et"></a>
+                    <a href="https://pl.pinterest.com/agellerart/" target="_blank"><img class="pint" src="./images/frame.gif" alt="Pt"></a>
+                    <a href="https://www.facebook.com/profile.php?id=100086386541551" target="_blank"><img class="fb" src="./images/frame.gif" alt="Fb"></a>
+                    <a href="https://www.instagram.com/a.gellerart/" target="_blank"><img class="insta" src="./images/frame.gif" alt="Ins"></a>
+                    <a href="https://www.tiktok.com/@a.gellerart" target="_blank"><img class="tikt" src="./images/frame.gif" alt="TT"></a>
                 </ul>
             </div>
 
@@ -32,17 +35,19 @@
                 </ul>
             </div>
 
-            <div class="page1" ><a href="./aboutus.html">About Us</a></div>
-            <div class="page2" ><a href="./news.html">News</a></div>
-            <div class="page3" ><a href="./artworks.html">Artworks</a></div>
+            <div class="page1" ><a href="./news.html">News</a></div>
+            <div class="page2" ><a href="./artworks.html">Artworks</a></div>
+            <div class="page3" ><a href="./aboutus.html">About Us</a></div>
             <div class="page4" ><a href="./contactus.html">Contact Us</a></div>
-            <div class="page5" ><a href="./signin.html">Sign In</a></div>
+            <div class="page5" ><a href="./signin.html">Join Us</a></div>
                         
         </div>
     </header>
 
     <body>
-        <img src="./images/instagram.gif" alt="Ins"></a>
+        
+        <div><img class="land" src="./images/landing700.gif" alt="fav"></div>
+
     </body>
 
     <footer>
