--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </header>
 
     <body>
-        
-        <div><img class="land" src="./images/landing700.gif" alt="fav"></div>
+
+        <div class="hero"><img src="./images/landingwide1200.gif" alt="fav"></div>
 
     </body>
 
