Last commit with a grid in header

--- a/index.html
+++ b/index.html
@@ -35,18 +35,27 @@
                 </ul>
             </div>
 
-            <div class="page1" ><a href="./news.html">News</a></div>
-            <div class="page2" ><a href="./artworks.html">Artworks</a></div>
-            <div class="page3" ><a href="./aboutus.html">About Us</a></div>
-            <div class="page4" ><a href="./contactus.html">Contact Us</a></div>
-            <div class="page5" ><a href="./signin.html">Join Us</a></div>
+            <div class="page1" ><a href="./events.html"><b>EVENTS</b></a></div>
+            <div class="page2" ><a href="./artworks.html"><b>ARTWORKS</b></a></div>
+            <div class="page3" ><a href="./ourstory.html"><b>OUR STORY</b></a></div>
+            <div class="page4" ><a href="./contactus.html"><b>CONTACT US</b></a></div>
+            <div class="page5" ><a href="./signin.html"><b>JOIN IN</b></a></div>
                         
         </div>
     </header>
 
     <body>
 
-        <div class="hero"><img src="./images/landingwide1200.gif" alt="fav"></div>
+        <div class="heroimg"><img src="./images/landingwide1500.gif" alt="fav"></div>
+
+        <h1>Story</h1>
+
+        <div class="grid-with-story">
+            <a href="./artworks.html"><img class="art1" src="./images/art1.gif" alt="Drawing"></a>
+            <p> txt</p>
+            <a href="./artworks.html"><img class="art1" src="./images/art1.gif" alt="Drawing"></a>
+            <a href="./artworks.html"><img class="art1" src="./images/art1.gif" alt="Drawing"></a>
+        </div>
 
     </body>
 
