Doors opening - working script

--- a/index.html
+++ b/index.html
@@ -64,23 +64,24 @@
 
     </body>
 
-        <span></span>
-
     <footer>
         <div class="container-foot">
 
             <div>
-                <h3>About Us</h3>
-                <a class="link" href="mystory.html">About company</a>
-                <a class="link" href="contact.html">Contact Us</a>
+                <h3>About</h3>
+                <a class="link" href="mystory.html">The Company</a>
+                <a class="link" href="mystory.html">Legal Information</a>
+                <a class="link" href="mystory.html">Help</a>
+                <a class="link" href="contact.html">Contact</a>
+                <span></span>
             </div>
 
             <div>
-                <h3>Help</h3>
+                <h3>Art</h3>
             </div>
 
             <div>
-                <h3>Follow Us</h3>
+                <h3>Follow</h3>
                 <ul class="socmed">
                     <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d" target="_blank"><img class="etsy" src="./images/frame.gif" alt="Et"></a>
                     <a href="https://pl.pinterest.com/agellerart/" target="_blank"><img class="pint" src="./images/frame.gif" alt="Pt"></a>
@@ -88,12 +89,10 @@
                     <a href="https://www.instagram.com/a.gellerart/" target="_blank"><img class="insta" src="./images/frame.gif" alt="Ins"></a>
                     <a href="https://www.tiktok.com/@a.gellerart" target="_blank"><img class="tikt" src="./images/frame.gif" alt="TT"></a>
                 </ul>
-                <p>© A.Geller Art - all rights reserved</p>
-
-
+                <span></span>
+                <span></span>
+                <p>© AGeller LTD - all rights reserved</p>
             </div>
 
         </div>
-
-</div>
     </footer>
