Added wc, red and green buttons are not pluged in

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="container-head"></div>
             <div class="headimg"><img src="./images/headcol1500.gif"></div>
             <ul class="nav">
+                <il><a href="./index.html"><b>HOME</b></a></nav>
                 <il><a href="./events.html"><b>EVENTS</b></a></nav>
                 <il><a href="./artworks.html"><b>ARTWORKS</b></a></nav>
                 <il><a href="./mystory.html"><b>MY STORY</b></a></nav>
