--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <link rel="stylesheet" href="styles.css">
+        <script type="text/javascript" src="scripts.js"></script>
     </head>
     <header>
         <div class="container-head"></div>
-            <div class="headimg"><img src="./images/headcol1500.gif"></div>
+            <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
                 <il><a href="./index.html"><b>HOME</b></a></nav>
                 <il><a href="./events.html"><b>EVENTS</b></a></nav>
@@ -28,7 +29,7 @@
 
     <body>
 
-        <div class="heroimg"><img src="./images/landcol1500.gif"></div>
+        <img class="heroimg" src="./images/landcol2.gif">
 
         <span></span>
 
