--- a/mystory.html
+++ b/mystory.html
@@ -25,8 +25,6 @@
             </ul>          
     </header>
 
-    <span></span>
-
     <body>
     <!-- ABOUT ME -->
         <div class = "container-me-michal">
@@ -34,7 +32,12 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">Text about me</p>
+                <p class="text-field">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
                 
             </div>
         </div>
