--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
         <span></span>
 
-        <div class="enjoy">Stories captured in the drawings</div>
+        <div class="cont-h1">
+            <img class="backimg" src="./images/backimg.gif">
+            <h1>Stories captured in the drawings</h1>
+        </div>
 
         <span></span>
 
