New background and frames

--- a/mystory.html
+++ b/mystory.html
@@ -32,14 +32,13 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-                    culpa qui officia deserunt mollit anim id est laborum.</p>
-                
+                <p class="text-field">Hello! I am Agnieszka. </p>
             </div>
+        </div>
+
+        <div class="cont-h1">
+            <img class="backimg" src="./images/backimg.gif">
+            <h1>Looking for Michal</h1>
         </div>
 
         <span></span>
@@ -48,7 +47,6 @@
         <div class = "grid-with-doors"> 
             <div id="cloud-with-text1" >
                 <img class="small-cloud" src="./images/cloud-small.gif">
-                <img class="me-small" src="./images/me-col.gif">
                 <p class="text-field-small">Text about doors</p>
             </div>
             <button id="england"><img class ="close" src="./images/doors4open.gif"></button>
