--- a/mystory.html
+++ b/mystory.html
@@ -46,8 +46,8 @@
     <!-- LOOKING FOR MICHAL -->
         <div class = "grid-with-doors"> 
             <div id="cloud-with-text1" >
-                <img class="small-cloud" src="./images/cloud-small.gif">
-                <p class="text-field-small">Text about doors</p>
+                <img class="small-cloud" src="./images/cloud.gif">
+                <p class="text-field-small">Michal is missing. Please help me find him.</p>
             </div>
             <button id="england"><img class ="close" src="./images/doors4open.gif"></button>
             <button id="american"><img class="close" src="./images/doors8.gif"></button>
@@ -67,6 +67,7 @@
             <button id="twinp"><img class="close" src="./images/doors1open.gif"></button>
             <div id="cloud-with-text2" >
                 <img class="small-cloud" src="./images/cloud.gif">
+                <p class="text-field-small">Please, please, please help me!</p>
             </div>
         </div>
 
