Added texts for door purpose

--- a/mystory.html
+++ b/mystory.html
@@ -32,7 +32,10 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">Hello! I am Agnieszka. </p>
+                <p class="text-field">Hello! I am Agnieszka. 
+                    I do a lot of different things, but here I want to show you my drawings. 
+                    I want to invite you to my world. You have to know that I wouldn't be here without the support of my friend Michal. 
+                    However, there is a problem with Michal. Michal is missing... </p>
             </div>
         </div>
 
@@ -47,7 +50,7 @@
         <div class = "grid-with-doors"> 
             <div id="cloud-with-text1" >
                 <img class="small-cloud" src="./images/cloud.gif">
-                <p class="text-field-small">Michal is missing. Please help me find him.</p>
+                <p id="text-field-small">Michal is missing. Please help me find him.</p>
             </div>
             <button id="england"><img class ="close" src="./images/doors4open.gif"></button>
             <button id="american"><img class="close" src="./images/doors8.gif"></button>
@@ -67,7 +70,7 @@
             <button id="twinp"><img class="close" src="./images/doors1open.gif"></button>
             <div id="cloud-with-text2" >
                 <img class="small-cloud" src="./images/cloud.gif">
-                <p class="text-field-small">Please, please, please help me!</p>
+                <p id="text-field-small2">Please, please, please help me! We have to find him!</p>
             </div>
         </div>
 
