--- a/index.html
+++ b/index.html
@@ -18,18 +18,31 @@
         <div class="container-head"></div>
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
-                <il><a href="./index.html"><b>HOME</b></a></nav>
-                <il><a href="./events.html"><b>EVENTS</b></a></nav>
-                <il><a href="./artworks.html"><b>ARTWORKS</b></a></nav>
-                <il><a href="./mystory.html"><b>MY STORY</b></a></nav>
-                <il><a href="./contact.html"><b>CONTACT</b></a></nav>
-                <il><a href="./join.html"><b>JOIN MY STORY</b></a></nav>
+                <il><a href="./index.html">HOME</a></nav>
+                <il><a href="./events.html">EVENTS</a></nav>
+                <il><a href="./artworks.html">ARTWORKS</a></nav>
+                <il><a href="./mystory.html">MY STORY</a></nav>
+                <il><a href="./contact.html">CONTACT</a></nav>
+                <il><a href="./join.html">JOIN MY STORY</a></nav>
             </ul>          
     </header>
 
     <body>
 
         <img class="heroimg" src="./images/landcol2.gif">
+
+        <span></span>
+
+        <div class = "container-me">
+            <div class="portrait"><img src="./images/me.gif"></div>
+            <div class="cloud">
+                <img src="./images/cloud.gif">
+                <p class="text-field">Hello! I am Agnieszka. 
+                    I welcome you warmly. I hope you will stay here for longer.<br>
+                    If you do not have much time, go to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
+                    However, if you want to get to know me better, go to <a class="ins-link" href="./mystory.html">MY STORY</a>.</p>
+            </div>
+        </div>
 
         <span></span>
 
