--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <div class="cloud">
                 <img src="./images/cloud.gif">
                 <p class="text-field">Hello! I am Agnieszka. 
-                    I welcome you warmly. I hope you will stay here for longer.<br>
-                    If you do not have much time, go to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
-                    However, if you want to get to know me better, go to <a class="ins-link" href="./mystory.html">MY STORY</a>.</p>
+                    If You don`t have much time, go to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
+                    However, if You want to get to know me better, go to <a class="ins-link" href="./mystory.html">MY STORY</a>.</p>
             </div>
         </div>
 
