--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">Hello! I am Agnieszka. 
+                <p class="text-field">Hello! I am Agnieszka. I am glad to see You here! I hope you will stay here for longer.
                     If You don`t have much time, go to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
                     However, if You want to get to know me better, go to <a class="ins-link" href="./mystory.html">MY STORY</a>.</p>
             </div>
