--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="cloud">
                 <img src="./images/cloud.gif">
                 <p class="text-field">Hello! I am Agnieszka. I am glad to see You here! I hope You will stay here for longer.<br>
-                    If You don`t have much time, go to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
+                    If You don`t have much time, go directly to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
                     However, if You want to get to know me better, go to <a class="ins-link" href="./mystory.html">MY STORY</a>.</p>
             </div>
         </div>
