Added grid in artworks

--- a/artworks.html
+++ b/artworks.html
@@ -9,17 +9,61 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles-artworks.css">
         <script type="text/javascript" src="scripts.js"></script>
     </head>
     <header>
         <div class="container-head"></div>
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
-                <il><a href="./index.html"><b>HOME</b></a></nav>
-                <il><a href="./events.html"><b>EVENTS</b></a></nav>
-                <il><a href="./artworks.html"><b>ARTWORKS</b></a></nav>
-                <il><a href="./mystory.html"><b>MY STORY</b></a></nav>
-                <il><a href="./contact.html"><b>CONTACT</b></a></nav>
-                <il><a href="./join.html"><b>JOIN MY STORY</b></a></nav>
+                <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
+                <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
+                <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
+                <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
+                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
             </ul>          
     </header>
+
+    <body>
+        <div class = "container-me backg2">
+            <div class="portrait"><img src="./images/me.gif"></div>
+            <div class="cloud">
+                <img src="./images/cloud.gif">
+                <p class="text-field">I am happy to see You here! <br> I am so sorry, that this page isn't finished yet. Please, come back later.</p>
+            </div>
+        </div>
+
+        <span></span>
+
+        <div class="cont-h1">
+            <img class="backimg" src="./images/backimg.gif">
+            <h1>Stories captured in the drawings</h1>
+        </div>
+
+        <span></span>
+
+        <div class="cont-art1">
+            <div class="artw">
+                <img class="img-big-ver" src="./images/a-geller-art-1.gif">
+            </div>
+            <div class="artw">
+                <img class="img-ver" src="./images/a-geller-art-1-1.gif">
+            </div>
+            <div class="artw">
+                <img class="img-ver" src="./images/a-geller-art-1-2.gif">
+            </div>
+            <div class="artw">
+                <img class="img-ver relativ" src="./images/backimg2.gif">
+                <p class="txt-ver">Lorem ipsum..</p>
+            </div>
+            <div class="artw">
+                <img class="img-hor" src="./images/a-geller-art-1-4.gif">
+            </div>
+            <div class="artw">
+                <img class="img-ver" src="./images/a-geller-art-1-2.gif">
+            </div>
+            <div class="artw"></div>
+            <div class="artw"></div>
+        </div>
+    </body>
