--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,20 @@
         <div class="container-head"></div>
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
-                <il><a href="./index.html"><b>HOME</b></a></nav>
-                <il><a href="./events.html"><b>EVENTS</b></a></nav>
-                <il><a href="./artworks.html"><b>ARTWORKS</b></a></nav>
-                <il><a href="./mystory.html"><b>MY STORY</b></a></nav>
-                <il><a href="./contact.html"><b>CONTACT</b></a></nav>
-                <il><a href="./join.html"><b>JOIN MY STORY</b></a></nav>
+                <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
+                <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
+                <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
+                <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
+                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
             </ul>          
     </header>
+    <body>
+        <div class = "container-me backg2">
+            <div class="portrait"><img src="./images/me.gif"></div>
+            <div class="cloud">
+                <img src="./images/cloud.gif">
+                <p class="text-field">I am so sorry, but this page isn't finished yet. Please, come back later.</p>
+            </div>
+        </div>
+    </body>
