--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div class="container-head"></div>
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
-                <il><a href="./index.html">HOME</a></nav>
-                <il><a href="./events.html">EVENTS</a></nav>
-                <il><a href="./artworks.html">ARTWORKS</a></nav>
-                <il><a href="./mystory.html">MY STORY</a></nav>
-                <il><a href="./contact.html">CONTACT</a></nav>
-                <il><a href="./join.html">JOIN MY STORY</a></nav>
+                <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
+                <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
+                <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
+                <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
+                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
             </ul>          
     </header>
 
@@ -33,13 +33,13 @@
 
         <span></span>
 
-        <div class = "container-me">
+        <div class = "container-me backg">
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
                 <p class="text-field">Hello! I am Agnieszka. I am glad to see You here! I hope You will stay here for longer.<br>
-                    If You don`t have much time, go directly to the section with my <a class="ins-link" href="./artworks.html">ARTWORKS</a>.<br>
-                    However, if You want to get to know me better, go to <a class="ins-link" href="./mystory.html">MY STORY</a>.</p>
+                    If You don`t have much time, go directly to the section with my <a class="ins-link no-dec-blc" href="./artworks.html">ARTWORKS</a>.<br>
+                    However, if You want to get to know me better, go to <a class="ins-link no-dec-blc" href="./mystory.html">MY STORY</a>.</p>
             </div>
         </div>
 
@@ -54,7 +54,7 @@
 
         <div class="grid-with-story">
             <div><img src="./images/a-geller-art-1-1.gif"></div>
-            <a href="artworks.html"><img class="body1" src="./images/bodytxt1.gif"></a>
+            <a href="artworks.html"><img class="body1 relativ" src="./images/bodytxt1.gif"></a>
             <div><img src="./images/a-geller-art-1-2.gif"></div>
             <div><img src="./images/a-geller-art-1-3.gif"></div>
         </div>
@@ -85,21 +85,21 @@
         <div class="container-foot">
 
             <div>
-                <h3>About</h3>
-                <a class="link" href="mystory.html">The Company</a>
-                <a class="link" href="mystory.html">Legal Information</a>
-                <a class="link" href="mystory.html">Help</a>
-                <a class="link" href="contact.html">Contact</a>
+                <h2>About</h2>
+                <a class="link no-dec-blc" href="mystory.html">The Company</a>
+                <a class="link no-dec-blc" href="mystory.html">Legal Information</a>
+                <a class="link no-dec-blc" href="mystory.html">Help</a>
+                <a class="link no-dec-blc" href="contact.html">Contact</a>
                 <span></span>
             </div>
 
             <div>
-                <h3>Art</h3>
+                <h2>Art</h2>
             </div>
 
             <div>
-                <h3>Follow</h3>
-                <ul class="socmed">
+                <h2>Follow</h2>
+                <ul class="socmed ">
                     <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d" target="_blank"><img class="etsy" src="./images/frame.gif" alt="Et"></a>
                     <a href="https://pl.pinterest.com/agellerart/" target="_blank"><img class="pint" src="./images/frame.gif" alt="Pt"></a>
                     <a href="https://www.facebook.com/profile.php?id=100086386541551" target="_blank"><img class="fb" src="./images/frame.gif" alt="Fb"></a>
