--- a/mystory.html
+++ b/mystory.html
@@ -16,12 +16,12 @@
         <div class="container-head"></div>
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
-                <il><a href="./index.html"><b>HOME</b></a></nav>
-                <il><a href="./events.html"><b>EVENTS</b></a></nav>
-                <il><a href="./artworks.html"><b>ARTWORKS</b></a></nav>
-                <il><a href="./mystory.html"><b>MY STORY</b></a></nav>
-                <il><a href="./contact.html"><b>CONTACT</b></a></nav>
-                <il><a href="./join.html"><b>JOIN MY STORY</b></a></nav>
+                <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
+                <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
+                <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
+                <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
+                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
             </ul>          
     </header>
 
@@ -35,7 +35,8 @@
                 <p class="text-field">Hello! I am Agnieszka. 
                     I do a lot of different things, but here I want to show you my drawings. 
                     I want to invite you to my world. You have to know that I wouldn't be here without the support of my friend Michal. 
-                    However, there is a problem with Michal. Michal is missing... </p>
+                    However, there is a problem with Michal. Michal is missing...<br>
+                    I am so sorry, but this page isn't finished yet. Please, come back later.</p>
             </div>
         </div>
 
@@ -78,37 +79,3 @@
 
     <span></span>
 
-    <footer>
-        <div class="container-foot">
-
-            <div>
-                <h3>About</h3>
-                <a class="link" href="mystory.html">The Company</a>
-                <a class="link" href="mystory.html">Legal Information</a>
-                <a class="link" href="mystory.html">Help</a>
-                <a class="link" href="contact.html">Contact</a>
-                <span></span>
-            </div>
-
-            <div>
-                <h3>Art</h3>
-            </div>
-
-            <div>
-                <h3>Follow</h3>
-                <ul class="socmed">
-                    <a href="https://www.etsy.com/pl/people/xa6r7tj4jy2m451d" target="_blank"><img class="etsy" src="./images/frame.gif" alt="Et"></a>
-                    <a href="https://pl.pinterest.com/agellerart/" target="_blank"><img class="pint" src="./images/frame.gif" alt="Pt"></a>
-                    <a href="https://www.facebook.com/profile.php?id=100086386541551" target="_blank"><img class="fb" src="./images/frame.gif" alt="Fb"></a>
-                    <a href="https://www.instagram.com/a.gellerart/" target="_blank"><img class="insta" src="./images/frame.gif" alt="Ins"></a>
-                    <a href="https://www.tiktok.com/@a.gellerart" target="_blank"><img class="tikt" src="./images/frame.gif" alt="TT"></a>
-                </ul>
-                <span></span>
-                <span></span>
-                <p>© AGeller LTD - all rights reserved</p>
-            </div>
-
-        </div>
-    </footer>
-
-</html>
