Transparent images overlay added. Fonts fixed.

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">I am so sorry, but this page isn't finished yet. Please, come back later.</p>
+                <p class="text-field txt-xxl-ital">I am so sorry, but this page isn't finished yet. Please, come back later.</p>
             </div>
         </div>
     </body>
