--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">Hello! I am Agnieszka. I am glad to see You here! I hope You will stay here for longer.<br>
+                <p class="text-field txt-xxl-ital">Hello! I am Agnieszka. I am glad to see You here! I hope You will stay here for longer.<br>
                     If You don`t have much time, go directly to the section with my <a class="ins-link no-dec-blc" href="./artworks.html">ARTWORKS</a>.<br>
                     However, if You want to get to know me better, go to <a class="ins-link no-dec-blc" href="./mystory.html">MY STORY</a>.</p>
             </div>
@@ -108,7 +108,7 @@
                 </ul>
                 <span></span>
                 <span></span>
-                <p>© AGeller LTD - all rights reserved</p>
+                <p class="txt-xxl">© AGeller LTD - all rights reserved</p>
             </div>
 
         </div>
