--- a/mystory.html
+++ b/mystory.html
@@ -32,7 +32,7 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field">Hello! I am Agnieszka. 
+                <p class= "text-field txt-xxl-ital">Hello! I am Agnieszka. My head is full of ideas. For years I 
                     I do a lot of different things, but here I want to show you my drawings. 
                     I want to invite you to my world. You have to know that I wouldn't be here without the support of my friend Michal. 
                     However, there is a problem with Michal. Michal is missing...<br>
@@ -51,7 +51,7 @@
         <div class = "grid-with-doors"> 
             <div id="cloud-with-text1" >
                 <img class="small-cloud" src="./images/cloud.gif">
-                <p id="text-field-small">Michal is missing. Please help me find him.</p>
+                <p id="text-field-small" class="text-field-small txt-xxl-ital">Michal is missing. Please help me find him.</p>
             </div>
             <button id="england"><img class ="close" src="./images/doors4open.gif"></button>
             <button id="american"><img class="close" src="./images/doors8.gif"></button>
@@ -71,7 +71,7 @@
             <button id="twinp"><img class="close" src="./images/doors1open.gif"></button>
             <div id="cloud-with-text2" >
                 <img class="small-cloud" src="./images/cloud.gif">
-                <p id="text-field-small2">Please, please, please help me! We have to find him!</p>
+                <p id="text-field-small2" class="text-field-small txt-xxl-ital">Please, please, please help me! We have to find him!</p>
             </div>
         </div>
 
