Fixed grid with arts, navigation, clouds with text

--- a/artworks.html
+++ b/artworks.html
@@ -19,10 +19,10 @@
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
                 <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
                 <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
-            </ul>          
+            </ul>         
     </header>
 
     <body>
@@ -30,83 +30,7 @@
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud.gif">
-                <p class="text-field txt-xxl-ital">I am happy to see You here! <br> I am so sorry, but this page isn't finished yet. Please, come back later.</p>
+                <p class="text-field txt-xxl-ital">I am so sorry, but this page isn't finished yet. Please, come back later.</p>
             </div>
         </div>
-
-        <span></span>
-
-        <div class="cont-h1">
-            <img class="backimg" src="./images/backimg.gif">
-            <h1>Somewhere in time</h1>
-        </div>
-
-        <span></span>
-
-        <div class="cont-art">
-            <!-- Container with images. Img sizes: big-ver (2x2fr): 598x800px, ver(1fr): 294x400px, hor(2x1fr): 598x400px, hor-long (3x1fr): 902x400px -->
-
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-big-ver" src="./images/a-geller-art-1f.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-big.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-ver" src="./images/a-geller-art-1-1.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-ver.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-ver" src="./images/a-geller-art-1-2.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-ver.gif">
-            </div>
-            <div class="artw1">
-                <img class="img-ver relativ" src="./images/backimg2.gif">
-                <p class="txt-ver">Lorem ipsum..</p>
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-hor" src="./images/a-geller-art-1-4.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-hor.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-ver" src="./images/a-geller-art-1-2.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-ver.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-hor" src="./images/a-geller-art-1-4.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-hor.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-ver" src="./images/a-geller-art-1-2.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-ver.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-ver" src="./images/a-geller-art-1-2.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-ver.gif">
-            </div>
-            <div class="artw1 cont-img">
-                <img class="underlay-img img-ver" src="./images/a-geller-art-1-2.gif">
-                <img class="overlay-img img-big-ver" src="./images/transp-ver.gif">
-            </div>
-        </div>
-        <!--
-        <div class="cont-art">
-            <div class="artw2">
-                <img class="img-ver" src="./images/a-geller-art-1-1.gif">
-            </div>
-            <div class="artw2">
-                <img class="img-big-ver" src="./images/a-geller-art-1.gif">
-            </div>
-            <div class="artw2">
-                <img class="img-ver" src="./images/a-geller-art-1-1.gif">
-            </div>
-            <div class="artw2">
-                <img class="img-ver" src="./images/a-geller-art-1-1.gif">
-            </div>
-            <div class="artw2">
-                <img class="img-ver" src="./images/a-geller-art-1-1.gif">
-            </div>
-            <div class="artw2">
-                <img class="img-ver" src="./images/a-geller-art-1-1.gif">
-            </div>
-        </div>
-        -->
     </body>
