--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
                 <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
                 <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
             </ul>          
     </header>
 
@@ -36,10 +36,13 @@
         <div class = "container-me backg">
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
-                <img src="./images/cloud.gif">
-                <p class="text-field txt-xxl-ital">Hello! I am Agnieszka. I am glad to see You here! I hope You will stay here for longer.<br>
+                <img src="./images/cloud-big.gif">
+                <p class="text-field txt-xxl-ital">Hello! I am Agnieszka. I am glad to see You here! I designed this website 
+                    so you can have a good time among my drwaings and ideas. I have prepared a few surprises for you. I encourage you to stay longer. <br>
                     If You don`t have much time, go directly to the section with my <a class="ins-link no-dec-blc" href="./artworks.html">ARTWORKS</a>.<br>
-                    However, if You want to get to know me better, go to <a class="ins-link no-dec-blc" href="./mystory.html">MY STORY</a>.</p>
+                    However, if You want to get to know me better, go to <a class="ins-link no-dec-blc" href="./mystory.html">MY STORY</a>.<br>
+                    <br>
+                    Unfortunately this website isn't finished yet. Please visit me later.</p>
             </div>
         </div>
 
