--- a/mystory.html
+++ b/mystory.html
@@ -19,10 +19,10 @@
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
                 <il><a class="no-dec-blc" href="./events.html">EVENTS</a></nav>
                 <il><a class="no-dec-blc" href="./artworks.html">ARTWORKS</a></nav>
+                <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-                <il><a class="no-dec-blc" href="./join.html">JOIN MY STORY</a></nav>
-            </ul>          
+            </ul>         
     </header>
 
     <body>
