Added two grids with images

--- a/mystory.html
+++ b/mystory.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="cont-h1">
-            <img class="backimg" src="./images/backimg.gif">
+            <img src="./images/backimg.gif">
             <h1>Looking for Michal</h1>
         </div>
 
