--- a/index.html
+++ b/index.html
@@ -33,23 +33,26 @@
 
         <span></span>
 
-        <div class = "container-me backg">
+        <div class = "container-me backg1">
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud-big.gif">
-                <p class="text-field txt-xxl-ital">Hello! I am Agnieszka. I am glad to see You here! I designed this website 
-                    so you can have a good time among my drwaings and ideas. I have prepared a few surprises for you. I encourage you to stay longer. <br>
+                <p class="text-field txt-xxl-ital">Hello! I am Agnieszka. I am glad to see You here! <br>
+                    <br>
+                    I designed this website so you can have a good time among my drwaings and ideas.
+                    I have prepared a few surprises for you. I encourage you to stay longer. <br>
+                    <br>
                     If You don`t have much time, go directly to the section with my <a class="ins-link no-dec-blc" href="./artworks.html">ARTWORKS</a>.<br>
                     However, if You want to get to know me better, go to <a class="ins-link no-dec-blc" href="./mystory.html">MY STORY</a>.<br>
                     <br>
-                    Unfortunately this website isn't finished yet. Please visit me later.</p>
+                    *** Unfortunately this website isn't finished yet. Please visit me later. ***</p>
             </div>
         </div>
 
         <span></span>
 
         <div class="cont-h1">
-            <img class="backimg" src="./images/backimg.gif">
+            <img src="./images/backimg.gif">
             <h1>Stories captured in the drawings</h1>
         </div>
 
@@ -57,7 +60,7 @@
 
         <div class="grid-with-story">
             <div><img src="./images/a-geller-art-1-1.gif"></div>
-            <a href="artworks.html"><img class="body1 relativ" src="./images/bodytxt1.gif"></a>
+            <a href="stories.html#som-in-time"><img class="body1 relativ" src="./images/bodytxt1.gif"></a>
             <div><img src="./images/a-geller-art-1-2.gif"></div>
             <div><img src="./images/a-geller-art-1-3.gif"></div>
         </div>
@@ -65,7 +68,7 @@
         <span></span>
 
         <div class="grid-with-story">
-            <a href="artworks.html"><img class="body2" src="./images/bodytxt2.gif"></a>
+            <a href="stories.html#long-way-roots"><img class="body2" src="./images/bodytxt2.gif"></a>
             <div><img src="./images/a-geller-art-2-1.gif"></div>
             <div><img src="./images/a-geller-art-2-2.gif"></div>
             <div><img src="./images/a-geller-art-2-3.gif"></div>
@@ -76,7 +79,7 @@
         <div class="grid-with-story">
             <div><img src="./images/a-geller-art-3-1.gif"></div>
             <div><img src="./images/a-geller-art-3-2.gif"></div>
-            <a href="artworks.html"><img class="body3" src="./images/bodytxt3.gif"></a>
+            <a href="stories.html#slav-blood"><img class="body3" src="./images/bodytxt3.gif"></a>
             <div><img src="./images/a-geller-art-3-3.gif"></div>
         </div>
 
